# IT-Solutions

./: .env  README.md  example.env  pyproject.toml
backend/: db.sqlite3
backend/accounts/: managers.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/ads/: admin.py  models.py  parsers.py  serializers.py  services.py  urls.py  views.py
backend/ads/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/fixtures/: fixtures.json
